framec_tests/language_specific/c/v3_mir/positive/forward_with_parent_mixed.frm
@target c

system S {
    machine:
        $P {
        }
        $A => $P {
            e() {
                => $^
            }
        }
        $B {
        }
}

