framec_tests/language_specific/c/v3_mir/negative/forward_trailing_tokens.frm
@target c

system S {
    machine:
        $A {
            e() {
                => $^ extra
            }
        }
}

